<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/measurement_interval_key"
        android:inputType="number"
        android:numeric="integer"
        android:title="@string/measurement_interval_title"
        android:summary="@string/measurement_interval_summary"
        android:defaultValue="100"/>
    <EditTextPreference
        android:key="@string/handler_interval_key"
        android:inputType="number"
        android:numeric="integer"
        android:title="@string/handler_interval_title"
        android:summary="@string/handler_interval_summary"
        android:defaultValue="15000"/>
    <EditTextPreference
        android:key="@string/suspicion_threshold_key"
        android:inputType="number"
        android:numeric="integer"
        android:title="@string/suspicion_threshold_title"
        android:summary="@string/suspicion_threshold_summary"
        android:defaultValue="15"/>
    <EditTextPreference
        android:key="@string/calm_periods_threshold_key"
        android:inputType="number"
        android:numeric="integer"
        android:title="@string/calm_periods_threshold_title"
        android:summary="@string/calm_periods_threshold_summary"
        android:defaultValue="3"/>
    <EditTextPreference
        android:key="@string/vibration_rms_threshold_key"
        android:inputType="numberDecimal"
        android:numeric="decimal"
        android:title="@string/vibration_rms_threshold_title"
        android:summary="@string/vibration_rms_threshold_summary"
        android:defaultValue="0.1"/>
</PreferenceScreen>